# cross-linux

./: CMakeLists.txt  README.md  bridge.cpp  image.cpp  image.h  main.cpp  web.cpp  web.h  window.cpp  window.h
icon/: CMakeLists.txt
